force-app/main/default/objects/AFAWert__c/AFAWert__c.object-meta.xml
<CustomObject>
    <label>AFA Wert</label>
    <nameField>
        <label>AFA Wert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFA Werte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>