force-app/main/default/objects/AFAWert__c/fields/AFA__c.field-meta.xml
<CustomField>
    <fullName>AFA__c</fullName>
    <label>AFA</label>
    <referenceTo>AFA__c</referenceTo>
    <relationshipLabel>AFA Werte</relationshipLabel>
    <relationshipName>AFAWerte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>