force-app/main/default/objects/AFAWert__c/fields/AFAInProzent__c.field-meta.xml
<CustomField>
    <fullName>AFAInProzent__c</fullName>
    <label>AFA in Prozent</label>
    <precision>8</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>