force-app/main/default/objects/AFAWert__c/fields/Berechnung__c.field-meta.xml
<CustomField>
    <fullName>Berechnung__c</fullName>
    <label>Berechnung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gesamtwert</fullName>
            </value>
            <value>
                <fullName>Restwert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>