force-app/main/default/objects/AFAWert__c/fields/JahrBis__c.field-meta.xml
<CustomField>
    <fullName>JahrBis__c</fullName>
    <label>Jahr bis</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>