force-app/main/default/objects/AFAWert__c/fields/JahrVon__c.field-meta.xml
<CustomField>
    <fullName>JahrVon__c</fullName>
    <label>Jahr von</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>